# VirtualLightSensor

./: .clang-format  .gitignore  .pylintrc  README.MD
Driver/: AlsClient.cpp  Clients.cpp  Clients.h  Device.cpp  MappingFile.cpp  MappingFile.h  SensorsTrace.h  SharedMemory.hpp  VirtualLightSensorDriver.inf  VirtualLightSensorDriver.sln  VirtualLightSensorDriver.vcxproj  VirtualLightSensorDriver.vcxproj.Filters
Driver/Shared/: MappingFile.cpp  MappingFile.h
SensorsComboDriver/: AlsClient.cpp  BarClient.cpp  Clients.cpp  Clients.h  Device.cpp  Driver.cpp  Driver.h  GeomagneticOrientationClient.cpp  GravityVectorClient.cpp  GyrClient.cpp  MagClient.cpp  PrxClient.cpp  SensorsComboDriver.inf  SensorsComboDriver.sln  SensorsComboDriver.vcxproj  SensorsComboDriver.vcxproj.Filters  SensorsTrace.h  linearaccelerometerclient.cpp  relativefusionclient.cpp
WinServer/: CMakeLists.txt  build.bat  conanfile.py  creat-dev.bat
WinServer/src/: CMakeLists.txt
WinServer/src/VLSWinSer/: CMakeLists.txt  main.cpp
WinServer/src/VLSWinSer/Proc/: VLSModule.cpp  VLSModule.h  VLSProc.cpp  VLSProc.h
WinServer/src/VLSWinSer/Shared/: MappingFile.cpp  MappingFile.h  SharedMemory.hpp
WinServer/src/VLSWinSer/data/: NoteBook.cpp  NoteBook.h  Profile.cpp  Profile.h
WinServer/src/VLSWinSer/web/: HttpServer.hpp
WinServer/src/VLSWinSer/web/extension/: ParserQueryParameters.hpp
WinServer/src/VLSWinSer/web/handler/: DebugRequestHandler.cpp  DebugRequestHandler.h  MathRequestHandler.cpp  MathRequestHandler.h
WinServer/src/test/: CMakeLists.txt
WinServer/static/: event_done.html  index.html
